plugins {
    id "java"
    id "application"
    id "com.github.johnrengelman.shadow" version "6.0.0"
    id "com.github.ben-manes.versions" version "0.31.0"
}

group "de.lispyclouds"
version "1.0-SNAPSHOT"

repositories {
    mavenCentral()
    maven { url "https://clojars.org/repo" }
}

def crux_version = "20.09-1.11.0-beta"

dependencies {
    implementation "io.helidon.webserver:helidon-webserver:2.0.2"
    implementation "juxt:crux-core:$crux_version"
    implementation "juxt:crux-jdbc:$crux_version"
    implementation "org.postgresql:postgresql:42.2.16"
}

compileJava {
    sourceCompatibility = "14"
    targetCompatibility = "14"
}

mainClassName = "Main"

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}
